--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -12,15 +12,15 @@
     </div>
 </header>
 
-<main class="center">
-    <h1>Inloggen</h1>
+<main>
+    <h1 class="center">Inloggen</h1>
 
-    <form th:action="@{/user/login}" method="post">
+    <form class="login" th:action="@{/user/login}" method="post">
         <label for="username">Gebruikersnaam :</label>
         <input class="userFormField" type="text" id="username" name="username" placeholder="Gebruikersnaam"><br>
 
         <label for="password">Wachtwoord :</label>
-        <input class="userFormField" type="password" id="password" name="password">
+        <input class="userFormField" type="password" id="password" name="password" placeholder="Wachtwoord">
 
         <div class="searchButton">
             <input type="submit" value="Inloggen">
