--- a/src/main/resources/templates/locatie-details.html
+++ b/src/main/resources/templates/locatie-details.html
@@ -10,19 +10,40 @@
     <div th:replace="fragments/header :: header">
         hier komt de header
     </div>
-    <h1 th:text="${locatie.naam}"></h1>
+
 </header>
 
 <main>
-    <table>
-        <tr>
-            <td><p>Adres :</p></td>
-            <td><p th:text="${locatie.getAdres()}" >Adres locatie</p></td>
-        </tr>
-        <tr>
-            <td><p>Max aantal aanwezigen :</p></td>
-            <td><p th:text="${locatie.maxAanwezigen}" >0</p></tr>
-    </table>
+    <div th:if="${locatie}">
+        <h1 th:text="${locatie.naam}"></h1>
+        <table>
+            <tr>
+                <td><p>Adres :</p></td>
+                <td><p th:text="${locatie.getAdres()}" >Adres locatie</p></td>
+            </tr>
+            <tr>
+                <td><p>Max aantal aanwezigen :</p></td>
+                <td><p th:text="${locatie.maxAanwezigen}" >0</p></tr>
+        </table>
+
+        <div th:if="${netwerkevents.size() != 0}" >
+            <h2 class="center">Netwerkevents die hier doorgaan</h2>
+            <div class="project-cards" style="">
+                <div th:each="netwerkevent: ${netwerkevents}">
+                    <div class="card medium-card">
+                        <h3><b th:text="${netwerkevent.naamNetwerkEvent}"></b></h3>
+                        <div class="moreInfoButton">
+                            <a th:href="@{|/netwerkeventdetails/${netwerkevent.id}}">Meer info</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div th:unless="${locatie}">
+        <h1 class="center">Locatie niet gevonden</h1>
+    </div>
 </main>
 
 <footer th:replace="fragments/footer :: footer">
