--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -360,6 +360,10 @@ footer{
     text-align: center;
 }
 
+.reclameOrganisator > p{
+    text-align: center;
+}
+
 .editNetwerkevent{
     padding: 25px;
     margin: 0 auto;
