--- a/src/main/resources/templates/fragments/user.html
+++ b/src/main/resources/templates/fragments/user.html
@@ -31,6 +31,14 @@
             <li><a href="/user/logout">Uitloggen</a></li>
         </ul>
     </li>
+
+    <li class="inlogButton" sec:authorize="hasRole('ROLE_ORGANISATOR')" th:fragment="logoutMenu"><a class="active">Account</a>
+        <ul class="dropdown">
+            <li><a th:href="@{/organisator/aanvraag-new-netwerkevent-organisator}" href="">Aanvraag nieuw netwerkevent</a></li>
+            <li><a th:href="@{/organisator/netwerkevent-list-organisator}" href="#">Mijn netwerkevents</a></li>
+            <li><a href="/user/logout">Uitloggen</a></li>
+        </ul>
+    </li>
 </ul>
 
 
