--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -214,7 +214,7 @@ footer{
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     width: 370px;
-    height: 225px;
+    height: 275px;
     margin: 25px 25px 25px 25px;
     background-color: #f2f2f2;
     border-radius: 5px;
@@ -278,6 +278,26 @@ footer{
 
 .moreInfoButton a:hover{
     background-color: #819ca9;
+}
+
+.locatiemap{
+    margin-bottom: 25px;
+}
+
+.organisator-info{
+    margin: 25px auto;
+    background-color: white;
+    border-radius: 20px;
+    width: 500px;
+    padding: 5px 15px;
+}
+
+.netwerkevent-info{
+    margin: 25px auto;
+    background-color: white;
+    border-radius: 20px;
+    width: 450px;
+    padding: 5px 15px;
 }
 
 .buttonNextPrev{
@@ -346,23 +366,6 @@ footer{
     text-align: center;
 }
 
-.reclameOrganisator{
-    grid-area: reclame;
-    margin-left: -10px;
-    margin-right: -10px;
-    margin-top: 10px;
-    background-color: #29434e;
-    color: white;
-}
-
-.reclameOrganisator > h3{
-    color: white;
-    text-align: center;
-}
-
-.reclameOrganisator > p{
-    text-align: center;
-}
 
 .editNetwerkevent{
     padding: 25px;
