--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,6 +14,7 @@
 
 <main>
     <section>
+        <h1 class="center">Vind via deze website netwerkevents. En leer nieuwe mensen kennen. Veel plezier!</h1>
         <div class="slideshow-container">
 
             <!-- Full-width images with number and caption text -->
