prev next button locatie and organisator

--- a/src/main/resources/templates/locatie-details.html
+++ b/src/main/resources/templates/locatie-details.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-4.dtd">
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" >
 <head>
     <meta charset="UTF-8">
     <title th:text="${locatie.naam}">Organisatordetails</title>
@@ -11,6 +11,10 @@
         hier komt de header
     </div>
 
+    <div class="buttonNextPrev">
+        <a class="vorige" th:if="${prev!=null}" th:href="@{'/locatie-details/' + ${prev}}">&larr;</a>
+        <a class="volgende" th:if="${next!=null}"  th:href="@{'/locatie-details/' + ${next}}">&rarr;</a>
+    </div><br>
 </header>
 
 <main class="center">
